debug - false and add static-map to .ini file

--- a/webpage/templates/webpage/index.html
+++ b/webpage/templates/webpage/index.html
@@ -10,10 +10,16 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
 </head>
 <body>
+	<h2>
+		Deploying a simple web-page served by django.
+	</h2>
 	<div class="fill">
 		<div>
 			<img class="logo" src="{% static 'img/white logo.svg' %}">
 			
+		</div>
+		<div class="moringa">
+			<img src="{% static 'img/moringa.png' %}">
 		</div>
 	</div>
 </body>
